Issue #5640 Bidirectional QR accounts implemented

--- a/package.json
+++ b/package.json
@@ -96,8 +96,11 @@
     "deep-freeze-strict": "1.1.1",
     "dnode": "^1.2.2",
     "end-of-stream": "^1.4.4",
+    "eth-airsign-util": "^1.2.1",
+    "eth-bidirectional-qr-keyring": "^2.0.0",
     "eth-block-tracker": "^4.4.2",
     "eth-contract-metadata": "^1.15.0",
+    "eth-ellipal-util": "^1.0.0",
     "eth-ens-namehash": "^2.0.8",
     "eth-json-rpc-errors": "^2.0.2",
     "eth-json-rpc-filters": "^4.1.1",
@@ -105,6 +108,7 @@
     "eth-json-rpc-middleware": "^5.0.2",
     "eth-keyring-controller": "^6.1.0",
     "eth-method-registry": "^1.2.0",
+    "eth-opts-keyring-controller": "^6.1.0",
     "eth-phishing-detect": "^1.1.4",
     "eth-query": "^2.1.2",
     "eth-sig-util": "^2.3.0",
@@ -115,6 +119,7 @@
     "ethereumjs-util": "5.1.0",
     "ethereumjs-wallet": "^0.6.0",
     "ethers": "^5.0.8",
+    "etherscan-link": "^1.0.2",
     "ethjs": "^0.4.0",
     "ethjs-contract": "^0.2.3",
     "ethjs-ens": "^2.0.0",
@@ -142,7 +147,11 @@
     "pubnub": "4.27.3",
     "pump": "^3.0.0",
     "punycode": "^2.1.1",
+    "qr-encoding": "^1.2.1",
     "qrcode-generator": "1.4.1",
+    "qrcode-npm": "0.0.3",
+    "qrcode.react": "0.7.2",
+    "ramda": "^0.24.1",
     "react": "^16.12.0",
     "react-dnd": "^3.0.2",
     "react-dnd-html5-backend": "^7.4.4",
@@ -158,6 +167,7 @@
     "react-toggle-button": "^2.2.0",
     "react-transition-group": "^1.2.1",
     "readable-stream": "^2.3.3",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
@@ -238,7 +248,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-rtlcss": "^1.4.0",
-    "gulp-sass": "^4.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylelint": "^13.0.0",
     "gulp-terser-js": "^5.2.2",
