chore(deps): use new conflux local network lite @cfxjs/fullnode (#189)

--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
+    "@cfxjs/fullnode": "^1.0.0",
     "@metamask/eslint-config": "^1.1.0",
     "@metamask/forwarder": "^1.1.0",
     "@sentry/cli": "^1.49.0",
@@ -199,7 +200,6 @@
     "@storybook/addon-knobs": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@storybook/storybook-deployer": "^2.8.1",
-    "@yqrashawn/conflux-local-network-lite": "^2.2.0",
     "@yqrashawn/conflux-portal-onboarding": "^0.2.0-alpha",
     "addons-linter": "1.14.0",
     "babel-eslint": "^10.0.2",
