--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ workflows:
 jobs:
   create_release_pull_request:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - run:
@@ -94,7 +94,7 @@ jobs:
 
   prep-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - run:
@@ -113,7 +113,7 @@ jobs:
 
   prep-build:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -132,7 +132,7 @@ jobs:
 
   prep-build-test:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -150,7 +150,7 @@ jobs:
 
   prep-build-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -165,7 +165,7 @@ jobs:
 
   test-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -179,17 +179,16 @@ jobs:
 
   test-lint-shellcheck:
     docker:
-      - image: koalaman/shellcheck-alpine@sha256:169a51b086af0ab181e32801c15deb78944bb433d4f2c0a21cc30d4e60547065
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
-      - run: apk add --no-cache bash jq yarn
       - run:
           name: Shellcheck Lint
           command: yarn lint:shellcheck
 
   test-lint-lockfile:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -200,7 +199,7 @@ jobs:
 
   test-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -211,7 +210,7 @@ jobs:
 
   test-e2e-chrome:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -229,7 +228,7 @@ jobs:
 
   test-e2e-firefox:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - run:
@@ -250,7 +249,7 @@ jobs:
 
   benchmark:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -271,7 +270,7 @@ jobs:
 
   job-publish-prerelease:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -301,7 +300,7 @@ jobs:
 
   job-publish-release:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -319,7 +318,7 @@ jobs:
 
   job-publish-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - add_ssh_keys:
           fingerprints:
@@ -335,7 +334,7 @@ jobs:
 
   test-unit:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -350,7 +349,7 @@ jobs:
             - coverage
   test-unit-global:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -360,7 +359,7 @@ jobs:
           command: yarn test:unit:global
   test-mozilla-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -371,7 +370,7 @@ jobs:
 
   all-tests-pass:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - run:
           name: All Tests Passed
@@ -379,7 +378,7 @@ jobs:
 
   coveralls-upload:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.21-browsers
     steps:
       - checkout
       - attach_workspace:
