--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "generate:migration": "./development/generate-migration.sh"
   },
   "resolutions": {
+    "**/ethers/elliptic": "^6.5.3",
     "**/knex/minimist": "^1.2.5",
     "**/optimist/minimist": "^1.2.5",
     "**/socketcluster/minimist": "^1.2.5",
     "3box/ipfs/ipld-zcash/zcash-bitcore-lib/lodash": "^4.17.19",
+    "3box/ipfs/ipld-zcash/zcash-bitcore-lib/elliptic": "^6.5.3",
     "ganache-core/lodash": "^4.17.19"
   },
   "dependencies": {
