--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "generate:migration": "./development/generate-migration.sh"
   },
   "resolutions": {
+    "**/configstore/dot-prop": "^5.1.1",
     "**/ethers/elliptic": "^6.5.3",
     "**/knex/minimist": "^1.2.5",
     "**/optimist/minimist": "^1.2.5",
