Update to v3.0.1 of `MetaMask/cla-signature-bot`
The version of `MetaMask/cla-signature-bot` has been updated from
`v3.0.0` to `v3.0.1`. This version is more tolerant of being run
against issue comments, and it has replaced the `whitelist` input
parameter with `allowlist`.

--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "CLA Signature Bot"
-        uses: MetaMask/cla-signature-bot@v3.0.0
+        uses: MetaMask/cla-signature-bot@v3.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -19,5 +19,5 @@ jobs:
           url-to-cladocument: 'https://metamask.io/cla.html'
           # This branch can't have protections, commits are made directly to the specified branch.
           branch: 'cla-signatures'
-          whitelist: dependabot
+          allowlist: dependabot
           blockchain-storage-flag: false
