Load Intl.Numberformat polyfill locale data asynchronously.

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "3box": "^1.10.2",
     "@babel/runtime": "^7.5.5",
     "@download/blockies": "^1.0.3",
-    "@formatjs/intl-numberformat": "^5.5.4",
+    "@formatjs/intl-numberformat": "5.5.5",
     "@formatjs/intl-relativetimeformat": "^5.2.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@lavamoat/preinstall-always-fail": "^1.0.0",
