--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "3box": "^1.10.2",
     "@babel/runtime": "^7.5.5",
     "@material-ui/core": "1.0.0",
+    "@metamask/key-tree": "^1.0.0",
     "@sentry/browser": "^4.1.1",
     "@zxing/library": "^0.8.0",
     "abi-decoder": "^1.2.0",
