Use Node v10.22 for most workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ workflows:
 jobs:
   create_release_pull_request:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - run:
@@ -98,7 +98,7 @@ jobs:
 
   prep-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - run:
@@ -117,7 +117,7 @@ jobs:
 
   prep-build:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -136,7 +136,7 @@ jobs:
 
   prep-build-test:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -154,7 +154,7 @@ jobs:
 
   prep-build-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -169,7 +169,7 @@ jobs:
 
   test-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -193,7 +193,7 @@ jobs:
 
   test-lint-lockfile:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -204,7 +204,7 @@ jobs:
 
   test-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -215,7 +215,7 @@ jobs:
 
   test-e2e-chrome:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -233,7 +233,7 @@ jobs:
 
   test-e2e-firefox:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - run:
@@ -254,6 +254,7 @@ jobs:
 
   benchmark:
     docker:
+      # TODO - update this image to use a newer version of Node
       - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
     steps:
       - checkout
@@ -275,7 +276,7 @@ jobs:
 
   job-publish-prerelease:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -305,7 +306,7 @@ jobs:
 
   job-publish-release:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -323,7 +324,7 @@ jobs:
 
   job-publish-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - add_ssh_keys:
           fingerprints:
@@ -339,7 +340,7 @@ jobs:
 
   test-unit:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -354,7 +355,7 @@ jobs:
             - coverage
   test-unit-global:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -365,7 +366,7 @@ jobs:
 
   validate-source-maps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -376,7 +377,7 @@ jobs:
 
   test-mozilla-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -387,7 +388,7 @@ jobs:
 
   all-tests-pass:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - run:
           name: All Tests Passed
@@ -395,7 +396,7 @@ jobs:
 
   coveralls-upload:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:10.22-browsers
     steps:
       - checkout
       - attach_workspace:
