--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "test:e2e:simple-fixture": "node test/e2e/simple-fixture-server.js",
     "test:e2e:chrome": "SELENIUM_BROWSER=chrome test/e2e/run-all.sh",
     "test:e2e:chrome:parallel": "SELENIUM_BROWSER=chrome test/e2e/run-all-parallel.sh",
+    "test:e2e:firefox:parallel": "SELENIUM_BROWSER=firefox test/e2e/run-all-parallel.sh",
+    "test:e2e:chrome:keytest": "SELENIUM_BROWSER=chrome test/e2e/run-key-test.sh",
+    "test:e2e:firefox:keytest": "SELENIUM_BROWSER=firefox test/e2e/run-key-test.sh",
     "test:web3:chrome": "SELENIUM_BROWSER=chrome test/e2e/run-web3.sh",
     "test:web3:firefox": "SELENIUM_BROWSER=firefox test/e2e/run-web3.sh",
     "test:e2e:firefox": "SELENIUM_BROWSER=firefox test/e2e/run-all.sh",
-    "test:e2e:firefox:parallel": "SELENIUM_BROWSER=firefox test/e2e/run-all-parallel.sh",
     "test:coverage": "nyc --reporter=text --reporter=html yarn test:unit",
     "test:coveralls-upload": "if [ \"$COVERALLS_REPO_TOKEN\" ]; then nyc report --reporter=text-lcov | coveralls; fi",
     "test:flat": "yarn test:flat:build && karma start test/flat.conf.js",
