Freeze JS environment with SES
Now that SES supports node v10, we can use its lockdown function.
This will prevent the mutation of global primordials, which are a
significant vector for supply chain attacks.

--- a/package.json
+++ b/package.json
@@ -93,7 +93,6 @@
     "currency-formatter": "^1.4.2",
     "d3": "^5.15.0",
     "debounce-stream": "^2.0.0",
-    "deep-freeze-strict": "1.1.1",
     "dnode": "^1.2.2",
     "end-of-stream": "^1.4.4",
     "eth-block-tracker": "^4.4.2",
@@ -164,6 +163,7 @@
     "rpc-cap": "^3.2.0",
     "safe-event-emitter": "^1.0.1",
     "safe-json-stringify": "^1.2.0",
+    "ses": "^0.10.4",
     "single-call-balance-checker-abi": "^1.0.0",
     "swappable-obj-proxy": "^1.1.0",
     "textarea-caret": "^3.0.1",
