ci - use node 12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ workflows:
 jobs:
   create_release_pull_request:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -102,7 +102,7 @@ jobs:
 
   prep-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - run:
@@ -121,7 +121,7 @@ jobs:
 
   prep-build:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     environment:
       NODE_OPTIONS: --max_old_space_size=1024
     steps:
@@ -142,7 +142,7 @@ jobs:
 
   prep-build-test:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     environment:
       NODE_OPTIONS: --max_old_space_size=1024
     steps:
@@ -162,7 +162,7 @@ jobs:
 
   prep-build-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -177,7 +177,7 @@ jobs:
 
   test-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -201,7 +201,7 @@ jobs:
 
   test-lint-lockfile:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -212,7 +212,7 @@ jobs:
 
   test-deps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -223,7 +223,7 @@ jobs:
 
   test-e2e-chrome:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -245,7 +245,7 @@ jobs:
 
   test-e2e-firefox:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - run:
@@ -270,7 +270,7 @@ jobs:
 
   benchmark:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -291,7 +291,7 @@ jobs:
 
   job-publish-prerelease:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -317,7 +317,7 @@ jobs:
 
   job-publish-release:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -335,7 +335,7 @@ jobs:
 
   job-publish-storybook:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - add_ssh_keys:
           fingerprints:
@@ -351,7 +351,7 @@ jobs:
 
   test-unit:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -366,7 +366,7 @@ jobs:
             - coverage
   test-unit-global:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -377,7 +377,7 @@ jobs:
 
   validate-source-maps:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -388,7 +388,7 @@ jobs:
 
   test-mozilla-lint:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
@@ -399,7 +399,7 @@ jobs:
 
   all-tests-pass:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - run:
           name: All Tests Passed
@@ -407,7 +407,7 @@ jobs:
 
   coveralls-upload:
     docker:
-      - image: circleci/node@sha256:e16740707de2ebed45c05d507f33ef204902349c7356d720610b5ec6a35d3d88
+      - image: circleci/node:12-buster-browsers
     steps:
       - checkout
       - attach_workspace:
