--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
     "jsonschema": "^1.2.4",
-    "lavamoat": "^4.1.1",
+    "lavamoat-core": "^6.1.0",
     "lodash": "^4.17.19",
     "loglevel": "^1.4.1",
     "luxon": "^1.24.1",
