--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "storybook:deploy": "storybook-to-ghpages --existing-output-dir .out --remote storybook --branch master",
     "update-changelog": "./development/auto-changelog.sh",
     "generate:migration": "./development/generate-migration.sh",
-    "lavamoat:parse": "lavamoat ./development/build/index.js --writeAutoConfigDebug",
+    "lavamoat:parse": "lavamoat ./development/build/index.js --writeAutoConfig",
     "lavamoat:exec:debug": "lavamoat ./development/build/index.js --debugMode",
     "lavamoat:exec": "lavamoat ./development/build/index.js",
     "postinstall": "patch-package"
